--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
+	        		<li><a href="/">home</a></li>
+	        		<li><a href="/blog/">blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -18,7 +19,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="#">email</a></li>
+	        		<li><a href="/">home</a></li>
+	        		<li><a href="/blog/">blog</a></li>
 				</ul>
 			</footer>
 		</body>
