--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel='stylesheet' id='prana-google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans%7CBitter&#038;ver=4.5.3' type='text/css' media='all' />
+
 		</head>
 		<body>
 			<nav>
