--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,16 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
+			<link rel='stylesheet' id='prana-google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans%7CBitter&#038;ver=4.5.3' type='text/css' media='all' />
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link rel='stylesheet' id='prana-google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans%7CBitter&#038;ver=4.5.3' type='text/css' media='all' />
-
 		</head>
 		<body>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
 	        		<li><a href="/blog/">blog</a></li>
+	        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -23,6 +23,7 @@
 	    		<ul>
 	        		<li><a href="/">home</a></li>
 	        		<li><a href="/blog/">blog</a></li>
+	        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>					
 				</ul>
 			</footer>
 		</body>
