--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<link rel='stylesheet' id='prana-google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans%7CBitter&#038;ver=4.5.3' type='text/css' media='all' />
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">home</a></li>
-	        		<li><a href="/blog/">blog</a></li>
-	        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
+<html>
+	<head>
+		<title>{{ page.title }}</title>
+		<link rel='stylesheet' id='prana-google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans%7CBitter&#038;ver=4.5.3' type='text/css' media='all' />
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-22338435-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>	
+		<nav>
+    		<ul>
+        		<li><a href="/">home</a></li>
+        		<li><a href="/blog/">blog</a></li>
+        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
 			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="/">home</a></li>
-	        		<li><a href="/blog/">blog</a></li>
-	        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>					
-				</ul>
-			</footer>
-		</body>
-	</html>
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="/">home</a></li>
+        		<li><a href="/blog/">blog</a></li>
+        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>					
+			</ul>
+		</footer>
+	</body>
+</html>
