--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Bradley Campbell, Web Developer">
+		<meta name="author" content="Bradley Campbell">
 		<title>{{ page.title }}</title>
-		<link rel='stylesheet' id='prana-google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans%7CBitter&#038;ver=4.5.3' type='text/css' media='all' />
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/stylesheet_rknz81.css">
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->		
 	</head>
 	<body>
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-		  ga('create', 'UA-22338435-1', 'auto');
-		  ga('send', 'pageview');
+{% include google-analytics.html %}
 
-		</script>	
-		<nav>
-    		<ul>
-        		<li><a href="/">home</a></li>
-        		<li><a href="/blog/">blog</a></li>
-        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>
-    		</ul>
-		</nav>
+{% include nav.html %}
+	
 		<div class="container">
 			{{ content }}
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="/">home</a></li>
-        		<li><a href="/blog/">blog</a></li>
-        		<li><a href="http://www.twitter.com/redknightnz81" target = "_blank">twitter</a></li>					
-			</ul>
-		</footer>
+		</div>
+		
+{% include footer.html %}
+
+{% include footer-js.html %}
+		
 	</body>
 </html>
