--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
 				<p>Website designed and coded by Bradley Campbell.</p>
 				<p>Powered by Jekyll, github pages and Boostrap.</p>
 				<p>
-					<a href="http://localhost/rknz_2016/">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="http://localhost/rknz_2016/blog/">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="http://localhost/rknz_2016/designs/">DESIGNS</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="{{ site.baseurl }}">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="{{ site.baseurl }}blog/">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="{{ site.baseurl }}designs/">DESIGNS</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="http://www.twitter.com/redknightnz81" target = "_blank">TWITTER</a>
 				</p>
 			</div>
