--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,18 +8,18 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="http://localhost/rknz_2016/">REDKNIGHTNZ81<span> // Bradley Campbell</span></a>
+					<a class="navbar-brand" href="{{ site.baseurl }}">REDKNIGHTNZ81<span> // Bradley Campbell</span></a>
 				</div>
 				<div class="collapse navbar-collapse" id="rknz81_navbar">
 					<ul class="nav navbar-nav">
 						<li class = "current-page">
-							<a href="http://localhost/rknz_2016/">HOME</a>
+							<a href="{{ site.baseurl }}">HOME</a>
 						</li>
 						<li>
-							<a href="http://localhost/rknz_2016/blog/">BLOG</a>
+							<a href="{{ site.baseurl }}blog/">BLOG</a>
 						</li>
 						<li>
-							<a href="http://localhost/rknz_2016/designs/">DESIGNS</a>
+							<a href="{{ site.baseurl }}designs/">DESIGNS</a>
 						</li>
 						<li>
 							<a href="http://www.twitter.com/redknightnz81" target = "_blank">TWITTER</a>
