--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,22 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date: '%B %d, %Y' }}</p>
-<div class="post">
-  {{ content }}
+<div class="row">
+	<div class = "col-md-4">
+		<h1>Blog.</h1>
+		<h2>{{ page.title }}</h2>
+		<p><span>{{ page.date | date: '%B %d, %Y' }}</span></p>
+	</div>
+	<div class = "col-md-8">		
+		{{ content }}
+		<div style = "display: none;">
+			<h3>Tags</h3>
+			<ul class = "post-tags">
+				<li>achievements</li>
+				<li>milestone</li>
+				<li>gaming</li>
+				<li>steam</li>
+			</ul>	
+		</div>		
+	</div>
 </div>
