--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 			<div class = "container">
 				<p><a href = "#top">Back to top</a></p>
 				<p>Website designed and coded by Bradley Campbell.</p>
-				<p>Powered by Jekyll, github pages and Boostrap.</p>
+				<p>Powered by Jekyll, github pages and Bootstrap.</p>
 				<p>
 					<a href="{{ site.baseurl }}">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="{{ site.baseurl }}blog/">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
