--- a/_layouts/designmockups.html
+++ b/_layouts/designmockups.html
@@ -9,5 +9,11 @@ layout: default
 	</div>
 	<div class = "col-md-8">		
 		{{ content }}
+		<h2>Additional Images</h2>
+		{% for ad_hash in page.additional_images %}
+		  {% for ad in ad_hash %}
+			<a href="{{ ad[1] }}">{{ ad[0] }}</a>
+		  {% endfor %}
+		{% endfor %}		
 	</div>
 </div>
