--- a/_layouts/designmockups.html
+++ b/_layouts/designmockups.html
@@ -25,8 +25,7 @@ layout: default
 			</div>
     {% if end_column == true %}			
       {% assign end_column = false %}
-	{% endif %}
-	{% if end_column == false %}		
+	{% elsif end_column == false %}		
 	  {% assign end_column = true %}
 	{% endif %}
   {% endfor %}
