--- a/_layouts/designmockups.html
+++ b/_layouts/designmockups.html
@@ -12,6 +12,7 @@ layout: default
 		<h2>Additional Images</h2>
 		<div class = "row">		
 {% for ad_hash in page.additional_images %}
+  {% assign end_column = false %}
   {% for ad in ad_hash %}
     {% if end_column == true %}
 		</div>
