--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,17 @@
 				<p>Website designed and coded by Bradley Campbell.</p>
 				<p>Powered by Jekyll, github pages and Bootstrap.</p>
 				<p>
-					<a href="{{ site.baseurl }}">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+{% for item in site.navigation %}
+  {% assign class = 'menu-item-standard %}
+  {% if page.url contains item.url %}
+    {% assign class = 'menu-item-current-page' %}
+  {% endif %}
+					<a href="{{ item.url }}" class="{{ class }}"{% if item.new_window == true %} target = "_blank"{% endif %}>{{ item.title }}</a>{% if item.new_window == false %}&nbsp;&nbsp;&nbsp;&nbsp;{% endif %}
+{% endfor %}				
+<!--					<a href="{{ site.baseurl }}">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="{{ site.baseurl }}blog/">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="{{ site.baseurl }}designs/">DESIGNS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="http://www.twitter.com/redknightnz81" target = "_blank">TWITTER</a>
+					<a href="http://www.twitter.com/redknightnz81" target = "_blank">TWITTER</a> -->
 				</p>
 			</div>
 		</footer>
