--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
   {% assign class = 'menu-item-standard' %}
   {% if page.url contains item.url %}
     {% assign class = 'menu-item-current-page' %}
-  {% elsif page.active_page = 'home' %}
+  {% elsif page.active_page == 'home' %}
     {% assign class = 'menu-item-current-page' %}
   {% endif %}
 					<a href="{{ item.url }}" class="{{ class }}"{% if item.new_window == true %} target = "_blank"{% endif %}>{{ item.title }}</a>{% if item.new_window == false %}&nbsp;&nbsp;&nbsp;&nbsp;{% endif %}
