--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->		
 	</head>
-	<body>
+	<body class = "page-layout-{{ page.layout }}">
 
 {% include google-analytics.html %}
 
