--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/stylesheet_rknz81.css">
-{% if page.page_layout == 'designmockups' %}
+{% if page.layout == 'designmockups' %}
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/lity.css">t>
 {% endif %}		
 		<!--[if lt IE 9]>
