--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/stylesheet_rknz81.css">
 {% if page.layout == 'designmockups' %}
-		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/lity.css">t>
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/lity.css">
 {% endif %}		
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
