--- a/_layouts/designmockups.html
+++ b/_layouts/designmockups.html
@@ -21,7 +21,7 @@ layout: default
     {% endif %}  
 			<div class="col-md-6">
 				<div class="image-concept-container">
-					<a href="{{ site.baseurl }}images/designs/full_size/{{ ad[1] }}" data-lity><img src="{{ site.baseurl }}images/designs/thumbnails/{{ ad[1] }}" alt=""></a>
+					<a href="{{ site.baseurl }}images/designs/full_size/{{ ad[1] }}" data-lity><img src="{{ site.baseurl }}images/designs/thumbnails/{{ dm.thumbmail_image }}" alt=""></a>
 				</div>
 			</div>
     {% if end_column == true %}			
