--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 	<div class = "col-md-4">
 		<h1>Blog.</h1>
 		<h2>{{ page.title }}</h2>
+		<p><span>{{ page.date | date: '%B %d, %Y' }}</span></p>
 	</div>
 	<div class = "col-md-8">		
 		{{ content }}
