--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,8 @@ layout: default
 		<h3>Additional Information</h3>
 		{% if page.associated_game %}		
 		<p>Store page: <a href = "{{ page.associated_game }}" target = "_blank">here</a></p>		
-		{% endif %}		
+		{% endif %}	
+		<p style = "display: none;">Category: {% for category in post.category %}<a class="codinfox-category-mark" href="/blog/category/#{{ category | slugify }}">{{ category }}</a>&nbsp;{% endfor %}</p>
+		<p style = "display: none;">Tags: {% for tag in post.tags %}<a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>&nbsp;{% endfor %}</p>
 	</div>
 </div>
