--- a/css/stylesheet_rknz81.css
+++ b/css/stylesheet_rknz81.css
@@ -49,6 +49,7 @@ footer a:hover { color: black; }
 	h3 { font-size: 16px; color: #CC0E0E; }
 	.col-md-8 .col-md-6 { padding: 0; }
 	footer { text-align: center; }
+	.blog-most-recent-posts div { padding: 0; }
 }
 
 @media (min-width: 768px) { 
@@ -61,6 +62,16 @@ footer a:hover { color: black; }
 	h1 { font-size: 60px; color: #CC0E0E; font-weight: bold; }
 	h2 { font-size: 22px; color: #CC0E0E; }
 	h3 { font-size: 18px; color: #CC0E0E; }	
+
 	.col-md-8 { padding-top: 26px; }
 	.col-md-8 .col-md-6 { padding: 0 20px 0 0; }
+	
+	.blog-most-recent-posts .col-md-2 h3 { text-align: right; margin: 0; padding: 0; }	
+	.blog-most-recent-posts .col-md-10 h3 { margin: 0 0 12px; padding: 0; }	
+	.blog-most-recent-posts .col-md-10 p.current-blog-post-categories a, .blog-most-recent-posts .col-md-10 p.current-blog-post-tags a { color: #7C7C7C; text-transform: uppercase; font-size: 12px; text-decoration: none; }	
+	.blog-most-recent-posts .col-md-10 p.current-blog-post-categories a:hover, .blog-most-recent-posts .col-md-10 p.current-blog-post-tags a:hover { text-decoration: underline; }
+	
+	.blog-most-recent-posts .col-md-2 { border-right: 5px solid #CC0E0E; }
+	.blog-left-sidebar p { color: #7C7C7C; }
+	
 }
