--- a/css/stylesheet_rknz81.css
+++ b/css/stylesheet_rknz81.css
@@ -66,7 +66,7 @@ footer a:hover { color: black; }
 	.col-md-8 { padding-top: 26px; }
 	.col-md-8 .col-md-6 { padding: 0 20px 0 0; }
 	
-	.blog-most-recent-posts .col-md-2 h3 { text-align: right; margin: 0; padding: 0; }	
+	.blog-most-recent-posts .col-md-2 h3 { text-align: right; margin: 0; padding: 0; text-transform: uppercase; }	
 	.blog-most-recent-posts .col-md-10 h3 { margin: 0 0 12px; padding: 0; }	
 	.blog-most-recent-posts .col-md-10 p.current-blog-post-categories a, .blog-most-recent-posts .col-md-10 p.current-blog-post-tags a { color: #7C7C7C; text-transform: uppercase; font-size: 12px; text-decoration: none; }	
 	.blog-most-recent-posts .col-md-10 p.current-blog-post-categories a:hover, .blog-most-recent-posts .col-md-10 p.current-blog-post-tags a:hover { text-decoration: underline; }
