--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,64 @@ layout: default
 		{% endif %}	
 		<p>Category: {% for category in page.category %}<a class="codinfox-category-mark" href="/blog/category/#{{ category | slugify }}">{{ category }}</a>&nbsp;{% endfor %}</p>
 		<p>Tags: {% for tag in page.tags %}<a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>&nbsp;{% endfor %}</p>
-		
-		<hr />
+		<div style = "display: none;">
+			<hr />
+			<h3>Related Posts</h3>
+			{% assign RELATED_POSTS_THRESHOLD = 3 %}
+
+			<ul>
+			  {% assign related_post_count = 0 %}
+			  {% for post in site.related_posts %}
+				{% if related_post_count == RELATED_POSTS_THRESHOLD %}
+				  {% break %}
+				{% endif %}
+				{% for tag in post.tags %}
+				  {% if page.tags contains tag %}
+					<li>
+					  <p><strong>
+						<a href="{{ site.baseurl }}{{ post.url }}">
+						  {{ post.title }}
+						  <small>{{ post.date | date_to_string }}</small>
+						</a>
+					  </strong></p>
+					</li>
+					{% assign related_post_count = related_post_count | plus: 1 %}
+					{% break %}
+				  {% endif %}
+				{% endfor %}
+			  {% endfor %}
+
+			  {% assign posts_left = RELATED_POSTS_THRESHOLD | minus: related_post_count %}
+			  {% unless posts_left == 0 %}
+				{% for post in site.related_posts %}
+				  {% if posts_left == 0 %}
+					{% break %}
+				  {% endif %}
+
+				  {% assign already_related = false %}
+				  {% for tag in post.tags %}
+					{% if page.tags contains tag %}
+					  {% assign already_related = true %}
+					  {% break %}
+					{% endif %}
+				  {% endfor %}
+				  {% unless already_related %}
+					{% assign posts_left = posts_left | minus: 1 %}
+					<li>
+					  <p><strong>
+						<a href="{{ site.baseurl }}{{ post.url }}">
+						  {{ post.title }}
+						  <small>{{ post.date | date_to_string }}</small>
+						</a>
+					  </strong></p>
+					</li>
+				  {% endunless %}
+				{% endfor %}
+			  {% endunless %}
+			</ul>
+		</div>
 		{% if page.comments %}
+		<hr />
 		{% include disqus.html %}
 		{% endif %}
 	</div>
