--- a/css/stylesheet_rknz81.css
+++ b/css/stylesheet_rknz81.css
@@ -74,4 +74,7 @@ footer a:hover { color: black; }
 	.blog-most-recent-posts .col-md-2 { border-right: 5px solid #CC0E0E; }
 	.blog-left-sidebar p { color: #7C7C7C; }
 	
+	.cta-cloud-items a { font-size: 10px !important; text-transform: uppercase; margin-bottom: 6px !important; max-height: 30px; line-height: 24px; display: inline-block; padding: 0px 10px; font-weight: bold; background: none; border: 2px solid #CC0E0E !important; color: #CC0E0E !important; }
+	.cta-cloud-items a:hover { background:#CC0E0E !important; color: white !important; }
+	
 }
