--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,12 +15,10 @@ layout: default
 		{% endif %}	
 		<p>Category: {% for category in page.category %}<a class="codinfox-category-mark" href="/blog/category/#{{ category | slugify }}">{{ category }}</a>&nbsp;{% endfor %}</p>
 		<p>Tags: {% for tag in page.tags %}<a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>&nbsp;{% endfor %}</p>
-		<div style = "display: none;">
-			<hr />
-			<h3>Related Posts</h3>
-			{% assign RELATED_POSTS_THRESHOLD = 3 %}
-
-			<ul>
+		<hr />
+		<h3>Related Posts</h3>
+		{% assign RELATED_POSTS_THRESHOLD = 3 %}
+		<div class = "row">
 			  {% assign related_post_count = 0 %}
 			  {% for post in site.related_posts %}
 				{% if related_post_count == RELATED_POSTS_THRESHOLD %}
@@ -28,14 +26,7 @@ layout: default
 				{% endif %}
 				{% for tag in post.tags %}
 				  {% if page.tags contains tag %}
-					<li>
-					  <p><strong>
-						<a href="{{ site.baseurl }}{{ post.url }}">
-						  {{ post.title }}
-						  <small>{{ post.date | date_to_string }}</small>
-						</a>
-					  </strong></p>
-					</li>
+			<div class = "col-md-3"><p><strong><a href="{{ post.url }}">{{ post.title }}</a></strong><br />{{ post.date | date_to_string }}</small></p></div>
 					{% assign related_post_count = related_post_count | plus: 1 %}
 					{% break %}
 				  {% endif %}
@@ -58,18 +49,10 @@ layout: default
 				  {% endfor %}
 				  {% unless already_related %}
 					{% assign posts_left = posts_left | minus: 1 %}
-					<li>
-					  <p><strong>
-						<a href="{{ site.baseurl }}{{ post.url }}">
-						  {{ post.title }}
-						  <small>{{ post.date | date_to_string }}</small>
-						</a>
-					  </strong></p>
-					</li>
+			<div class = "col-md-3"><p><strong><a href="{{ post.url }}">{{ post.title }}</a></strong><br />{{ post.date | date_to_string }}</small></p></div>
 				  {% endunless %}
 				{% endfor %}
 			  {% endunless %}
-			</ul>
 		</div>
 		{% if page.comments %}
 		<hr />
