--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 		<title>{{ page.title }}</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/stylesheet_rknz81.css">
+		<link rel="stylesheet" type="text/css" href="{{ site.url }}/css/stylesheet_rknz81.css">
 {% if page.layout == 'designmockups' %}
-		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/lity.css">
+		<link rel="stylesheet" type="text/css" href="{{ site.url }}/css/lity.css">
 {% endif %}		
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
