--- a/_layouts/designmockups.html
+++ b/_layouts/designmockups.html
@@ -20,8 +20,8 @@ layout: default
   {% endif %}  
 			<div class="col-md-6">
 				<div class="image-concept-container">
-					<a href="{{ site.baseurl }}images/designs/full_size/{{ dm_image.img_location }}" data-lity><img src="{{ site.baseurl }}images/designs/thumbnails/{{ page.thumbnail_image }}" alt=""></a>
-					<p><a href="{{ site.baseurl }}images/designs/full_size/{{ dm_image.img_location }}">{{ dm_image.img_desc }}</a></p>
+					<a href="{{ site.url }}images/designs/full_size/{{ dm_image.img_location }}" data-lity><img src="{{ site.url }}images/designs/thumbnails/{{ page.thumbnail_image }}" alt=""></a>
+					<p><a href="{{ site.url }}images/designs/full_size/{{ dm_image.img_location }}">{{ dm_image.img_desc }}</a></p>
 				</div>
 			</div>
     {% if end_column == true %}			
